config/200-osc-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: osc
  name: osc
  namespace: osc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: osc
  type: NodePort
